--- a/conf/application.conf
+++ b/conf/application.conf
@@ -67,11 +67,11 @@ mongodb {
 
 urls {
   login         = "http://localhost:9949/auth-login-stub/gg-sign-in"
-  loginContinue = "http://localhost:9000/ndds-frontend"
+  loginContinue = "http://localhost:6990/ndds-frontend"
   signOut       = "http://localhost:9553/bas-gateway/sign-out-without-state"
 }
 
-host = "http://localhost:9000"
+host = "http://localhost:6990"
 
 accessibility-statement{
   service-path = "/ndds-frontend"
@@ -85,7 +85,7 @@ play-frontend-hmrc {
     useRebrand = true
 }
 
-
+# switch between english/welsh if true
 features {
-  welsh-translation: true
+  welsh-translation: false
 }
