Bug Fixes in messages

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -67,11 +67,11 @@ mongodb {
 
 urls {
   login         = "http://localhost:9949/auth-login-stub/gg-sign-in"
-  loginContinue = "http://localhost:9000/ndds-frontend"
+  loginContinue = "http://localhost:6690/ndds-frontend"
   signOut       = "http://localhost:9553/bas-gateway/sign-out-without-state"
 }
 
-host = "http://localhost:9000"
+host = "http://localhost:6690"
 
 accessibility-statement{
   service-path = "/ndds-frontend"
@@ -87,5 +87,5 @@ play-frontend-hmrc {
 
 
 features {
-  welsh-translation: true
+  welsh-translation: false
 }
