DTR-7 direct debit instructions

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -84,8 +84,9 @@ tracking-consent-frontend {
 play-frontend-hmrc {
     useRebrand = true
 }
-
+newHomepageEnabled = false
 # switch between english/welsh if true
 features {
   welsh-translation: false
+  maxNumberDDIsAllowed = 3
 }
