--- a/conf/application.conf
+++ b/conf/application.conf
@@ -90,3 +90,16 @@ features {
   welsh-translation: false
   maxNumberDDIsAllowed = 3
 }
+
+# Logger
+# ~~~~~
+# You can also configure logback (http://logback.qos.ch/), by providing a logger.xml file in the conf directory .
+
+# Root logger:
+logger.root=INFO
+
+# Logger used by the framework:
+logger.play=WARN
+
+# Logger provided to your application:
+logger.application=WARN
