--- a/conf/application.conf
+++ b/conf/application.conf
@@ -102,8 +102,9 @@ payment-working-days-delay {
 
 features {
   # enable switching between english/welsh if true
-  welsh-translation: false
+  welsh-translation = false
   maxNumberDDIsAllowed = 3
+  existingDirectDebit = true
 }
 
 # Payment validation configuration
