DTR_87 main code working

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,6 +43,13 @@ microservice {
         host     = localhost
         port     = 9514
       }
+      
+      rds-datacache-proxy {
+        protocol = http
+        host     = localhost
+        port     = 6991
+        earliestPaymentDateUrl = "/rds-datacache-proxy/direct-debits/earliest-payment-date"
+      }
     }
 }
 
@@ -83,6 +90,12 @@ tracking-consent-frontend {
 
 play-frontend-hmrc {
     useRebrand = true
+}
+
+payment-working-days-delay {
+    dynamic-delay-with-auddis-enabled = 3
+    dynamic-delay-with-auddis-not-enabled = 8
+    fixed-delay = 2
 }
 
 # switch between english/welsh if true
