--- a/conf/application.conf
+++ b/conf/application.conf
@@ -92,3 +92,11 @@ features {
   welsh-translation: false
   maxNumberDDIsAllowed = 3
 }
+
+paymentPlan {
+  totalNumberOfPayments = 12
+  numberOfEqualPayments = 11
+  monthsUntilSecondPayment = 1
+  monthsUntilPenultimatePayment = 10
+  monthsUntilFinalPayment = 11
+}
