DTR-91 code cleaning

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -93,10 +93,13 @@ features {
   maxNumberDDIsAllowed = 3
 }
 
-paymentPlan {
-  totalNumberOfPayments = 12
-  numberOfEqualPayments = 11
-  monthsUntilSecondPayment = 1
-  monthsUntilPenultimatePayment = 10
-  monthsUntilFinalPayment = 11
+paymentSchedule {
+  tc {
+    totalNumberOfPayments = 12
+    numberOfEqualPayments = 11
+    monthsUntilSecondPayment = 1
+    monthsUntilPenultimatePayment = 10
+    monthsUntilFinalPayment = 11
+  }
 }
+
