[DTR-71] Implemented minimum liability validation for total amount due

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -92,3 +92,8 @@ features {
   welsh-translation: false
   maxNumberDDIsAllowed = 3
 }
+
+# Business rules configuration
+business-rules {
+  minimumLiabilityAmount = 12.00
+}
