[DTR-71] Adding EOL

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -93,7 +93,7 @@ features {
   maxNumberDDIsAllowed = 3
 }
 
-# Business rules configuration
-business-rules {
+# Payment validation configuration
+payment-validation {
   minimumLiabilityAmount = 12.00
 }
