DTR-76 added in retrieval from Lock service

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,6 +49,12 @@ microservice {
         host     = localhost
         port     = 6991
       }
+
+      lock {
+        protocol = http
+        host     = localhost
+        port     = 9506
+      }
     }
 }
 
@@ -103,6 +109,7 @@ features {
   # enable switching between english/welsh if true
   welsh-translation = false
   maxNumberDDIsAllowed = 3
+  enableLockService = false
   existingDirectDebit = true
 }
 
