--- a/conf/application.conf
+++ b/conf/application.conf
@@ -55,6 +55,11 @@ microservice {
         host     = localhost
         port     = 9506
       }
+      bars {
+        protocol = http
+        host     = localhost
+        port     = 9871
+      }
     }
 }
 
