DTR-126 application conf changes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,6 +49,12 @@ microservice {
         host     = localhost
         port     = 6991
       }
+      
+      ndds-backend {
+        protocol = http
+        host     = localhost
+        port     = 6992
+      }
 
       lock {
         protocol = http
