DTR-126 config update and name refactorings

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,8 +49,8 @@ microservice {
         host     = localhost
         port     = 6991
       }
-      
-      ndds-backend {
+
+      national-direct-debit {
         protocol = http
         host     = localhost
         port     = 6992
