--- a/conf/application.conf
+++ b/conf/application.conf
@@ -110,7 +110,7 @@ features {
   # enable switching between english/welsh if true
   welsh-translation = false
   maxNumberDDIsAllowed = 3
-  enableLockService = true
+  enableLockService = false
   existingDirectDebit = true
 }
 
