--- a/conf/application.conf
+++ b/conf/application.conf
@@ -116,7 +116,7 @@ features {
   # enable switching between english/welsh if true
   welsh-translation = false
   maxNumberDDIsAllowed = 3
-  enableLockService = false
+  enableLockService = true
   existingDirectDebit = true
 }
 
