--- a/conf/application.conf
+++ b/conf/application.conf
@@ -120,6 +120,10 @@ features {
   existingDirectDebit = true
 }
 
+mac {
+   key="CJAluZLJtC6oBLs2pqKg3A=="
+}
+
 # Payment validation configuration
 payment-validation {
   minimumLiabilityAmount = 12.00
