DTR-71 MAC generation resueable function

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -129,6 +129,12 @@ payment-validation {
   minimumLiabilityAmount = 12.00
 }
 
+# BACS Service User Number
+barsClient {
+  serviceUserNumber: "919342"
+ }
+
+
 paymentSchedule {
   tc {
     totalNumberOfPayments = 12
