DTR-72 MAC Generation and Mac Validation (#120)
* DTR-72 initial changes

* DTR-71 MAC generation resueable function

* DTR-72 update unit tests and add town in place of address line 2

* DTR-72 MAC varification

* DTR-72 update unit tests for mack generation varification

* DTR-72 code cleaning

* DTR-72 add unit test for if mac1 not generated

* DTR-72 mac1 generation

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -115,6 +115,15 @@ features {
   existingDirectDebit = true
 }
 
+mac {
+   key="CJAluZLJtC6oBLs2pqKg3A=="
+}
+
+barsClient {
+   serviceUserNumber="919342"
+}
+
+
 # Payment validation configuration
 payment-validation {
   minimumLiabilityAmount = 12.00
