--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,9 +82,9 @@ mongodb {
 host = "http://localhost:6990"
 
 urls {
-  login         = "http://localhost:9949/auth-login-stub/gg-sign-in"
+  login         = ${host}"/auth-login-stub/gg-sign-in"
   loginContinue = ${host}"/direct-debits"
-  signOut       = "http://localhost:9553/bas-gateway/sign-out-without-state"
+  signOut       = ${host}"/auth-login-stub/gg-sign-in"
   payingHmrc    = "http://www.hmrc.gov.uk/payinghmrc/"
 }
 
