--- a/conf/application.conf
+++ b/conf/application.conf
@@ -80,11 +80,12 @@ mongodb {
 }
 
 host = "http://localhost:6990"
+authHost = "http://localhost:9949"
 
 urls {
-  login         = ${host}"/auth-login-stub/gg-sign-in"
+  login         = ${authHost}"/auth-login-stub/gg-sign-in"
   loginContinue = ${host}"/direct-debits"
-  signOut       = ${host}"/auth-login-stub/gg-sign-in"
+  signOut       = ${authHost}"/auth-login-stub/gg-sign-in"
   payingHmrc    = "http://www.hmrc.gov.uk/payinghmrc/"
 }
 
