--- a/conf/application.conf
+++ b/conf/application.conf
@@ -77,6 +77,7 @@ session {
 mongodb {
   uri                 = "mongodb://localhost:27017/"${appName}
   timeToLiveInSeconds = 900
+  encryption.key = "SECRET"
 }
 
 host = "http://localhost:6990"
