--- a/conf/application.conf
+++ b/conf/application.conf
@@ -77,7 +77,7 @@ session {
 mongodb {
   uri                 = "mongodb://localhost:27017/"${appName}
   timeToLiveInSeconds = 900
-  encryption.key = "SECRET"
+  encryption.key = "someLocalEncryptionKey=="
 }
 
 host = "http://localhost:6990"
