--- a/conf/application.conf
+++ b/conf/application.conf
@@ -88,6 +88,7 @@ urls {
   loginContinue = ${host}"/direct-debits"
   signOut       = ${authHost}"/auth-login-stub/gg-sign-in"
   payingHmrc    = "http://www.hmrc.gov.uk/payinghmrc/"
+  hmrcHelpline  = "https://www.gov.uk/contact-hmrc"
 }
 
 accessibility-statement{
