--- a/conf/application.conf
+++ b/conf/application.conf
@@ -92,6 +92,7 @@ urls {
   selfAssessment = "https://www.gov.uk/find-hmrc-contacts/self-assessment-general-enquiries"
   paymentProblem = "https://www.gov.uk/find-hmrc-contacts/payment-problems-enquiries"
   hmrcOnlineServiceDesk = "https://www.gov.uk/find-hmrc-contacts/technical-support-with-hmrc-online-services"
+  govUK = "https://www.tax.service.gov.uk/home"
 }
 
 accessibility-statement{
