DTR-1263 added updated link

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -89,6 +89,8 @@ urls {
   signOut       = ${authHost}"/auth-login-stub/gg-sign-in"
   payingHmrc    = "http://www.hmrc.gov.uk/payinghmrc/"
   hmrcHelpline  = "https://www.gov.uk/contact-hmrc"
+  selfAssessment = "https://www.gov.uk/find-hmrc-contacts/self-assessment-general-enquiries"
+  paymentProblem = "https://www.gov.uk/find-hmrc-contacts/payment-problems-enquiries"
 }
 
 accessibility-statement{
