--- a/conf/application.conf
+++ b/conf/application.conf
@@ -91,6 +91,8 @@ urls {
   hmrcHelpline  = "https://www.gov.uk/contact-hmrc"
   selfAssessment = "https://www.gov.uk/find-hmrc-contacts/self-assessment-general-enquiries"
   paymentProblem = "https://www.gov.uk/find-hmrc-contacts/payment-problems-enquiries"
+  hmrcOnlineServiceDesk = "https://www.gov.uk/find-hmrc-contacts/technical-support-with-hmrc-online-services"
+  govUK = "https://www.tax.service.gov.uk/account"
 }
 
 accessibility-statement{
