--- a/conf/application.conf
+++ b/conf/application.conf
@@ -93,6 +93,8 @@ urls {
   paymentProblem = "https://www.gov.uk/find-hmrc-contacts/payment-problems-enquiries"
   hmrcOnlineServiceDesk = "https://www.gov.uk/find-hmrc-contacts/technical-support-with-hmrc-online-services"
   govUK = "https://www.tax.service.gov.uk/account"
+  paymentEarlyLate = "https://www.gov.uk/pay-paye-tax/direct-debit#before-you-start"
+  p11DPayment = "https://www.gov.uk/pay-class-1a-national-insurance/debit-or-credit-card#reference-number"
 }
 
 accessibility-statement{
