DTR-861: Fixing urls and back screen to T15Sc

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -95,6 +95,8 @@ urls {
   govUK = "https://www.tax.service.gov.uk/account"
   paymentEarlyLate = "https://www.gov.uk/pay-paye-tax/direct-debit#before-you-start"
   p11DPayment = "https://www.gov.uk/pay-class-1a-national-insurance/debit-or-credit-card#reference-number"
+  payMonthly = "https://www.gov.uk/pay-paye-tax/reference-numbers-early-late-payments#if-you-pay-monthly"
+  payQuarterly = "https://www.gov.uk/pay-paye-tax/reference-numbers-early-late-payments#if-you-pay-quarterly"
 }
 
 accessibility-statement{
