update form validation

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -118,7 +118,7 @@ working-days-delay {
 }
 
 features {
-  # enable switching between english/welsh if true
+  # enable switching between english/welsh
   welsh-translation = false
   maxNumberDDIsAllowed = 99
   maxNumberPPsAllowed = 99
