--- a/conf/application.conf
+++ b/conf/application.conf
@@ -27,6 +27,19 @@ play.modules.enabled += "config.Module"
 
 play.filters.enabled += play.filters.csp.CSPFilter
 
+play.filters.headers.contentTypeOptions = nosniff
+
+play.filters.csp.directives {
+  script-src = ${play.filters.csp.nonce.pattern} "'unsafe-inline' 'strict-dynamic' https: http:"
+  object-src = 'none'
+  base-uri = 'none'
+  report-uri: ${csp-report-host}"/content-security-policy-reports/"${appName}
+}
+
+csp-report-host: "http://localhost:8861"
+csp-report-host: "http://localhost:8861"
+
+
 play.i18n.langs = ["en", "cy"]
 
 microservice {
@@ -57,6 +70,10 @@ microservice {
         port     = 9871
       }
     }
+}
+
+tracking-consent-frontend {
+  gtm.container = "d"
 }
 
 contact-frontend {
