DTR-1253 initial changes Welsh Translations: suspend payment plan flows

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -119,7 +119,7 @@ working-days-delay {
 
 features {
   # enable switching between english/welsh
-  welsh-translation = false
+  welsh-translation = true
   maxNumberDDIsAllowed = 98
   maxNumberPPsAllowed = 99
   enableLockService = false
