DTR-1256: Cancel payment plan welsh Budget

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -119,7 +119,7 @@ working-days-delay {
 
 features {
   # enable switching between english/welsh
-  welsh-translation = true
+  welsh-translation = false
   maxNumberDDIsAllowed = 98
   maxNumberPPsAllowed = 99
   enableLockService = false
