DTR-1862 Implement GTM container on all NDDS pages (#300)
DTR-1862 Implement GTM container on all NDDS pages

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -27,6 +27,19 @@ play.modules.enabled += "config.Module"
 
 play.filters.enabled += play.filters.csp.CSPFilter
 
+play.filters.headers.contentTypeOptions = nosniff
+
+play.filters.csp.directives {
+  script-src = ${play.filters.csp.nonce.pattern} "'unsafe-inline' 'strict-dynamic' https: http:"
+  object-src = 'none'
+  base-uri = 'none'
+  report-uri: ${csp-report-host}"/content-security-policy-reports/"${appName}
+}
+
+csp-report-host: "http://localhost:8861"
+csp-report-host: "http://localhost:8861"
+
+
 play.i18n.langs = ["en", "cy"]
 
 microservice {
@@ -103,7 +116,7 @@ accessibility-statement{
 }
 
 tracking-consent-frontend {
-  gtm.container = "transitional"
+  gtm.container = "c"
 }
 
 play-frontend-hmrc {
