Migrate to Service Navigation

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,10 +30,10 @@ play.filters.enabled += play.filters.csp.CSPFilter
 play.filters.headers.contentTypeOptions = nosniff
 
 play.filters.csp.directives {
-  script-src = ${play.filters.csp.nonce.pattern} "'unsafe-inline' 'strict-dynamic' https: http:"
-  object-src = 'none'
-  base-uri = 'none'
-  report-uri: ${csp-report-host}"/content-security-policy-reports/"${appName}
+    script-src = ${play.filters.csp.nonce.pattern} "'unsafe-inline' 'strict-dynamic' https: http:"
+    object-src = 'none'
+    base-uri = 'none'
+    report-uri: ${csp-report-host}"/content-security-policy-reports/"${appName}
 }
 
 csp-report-host: "http://localhost:8861"
@@ -71,54 +71,55 @@ microservice {
 }
 
 contact-frontend {
-  host      = "http://localhost:9250"
-  serviceId = "NDDS"
+    host      = "http://localhost:9250"
+    serviceId = "NDDS"
 }
 
 timeout-dialog {
-  timeout   = 900
-  countdown = 120
+    timeout   = 900
+    countdown = 120
 }
 
 session {
-  timeoutSeconds = 900
+    timeoutSeconds = 900
 }
 
 mongodb {
-  uri                 = "mongodb://localhost:27017/"${appName}
-  timeToLiveInSeconds = 900
-  encryption.key = "someLocalEncryptionKey=="
+    uri                 = "mongodb://localhost:27017/"${appName}
+    timeToLiveInSeconds = 900
+    encryption.key = "someLocalEncryptionKey=="
 }
 
 host = "http://localhost:6990"
 authHost = "http://localhost:9949"
 
 urls {
-  login         = ${authHost}"/auth-login-stub/gg-sign-in"
-  loginContinue = ${host}"/direct-debits"
-  signOut       = ${authHost}"/auth-login-stub/gg-sign-in"
-  payingHmrc    = "http://www.hmrc.gov.uk/payinghmrc/"
-  hmrcHelpline  = "https://www.gov.uk/contact-hmrc"
-  selfAssessment = "https://www.gov.uk/find-hmrc-contacts/self-assessment-general-enquiries"
-  paymentProblem = "https://www.gov.uk/find-hmrc-contacts/payment-problems-enquiries"
-  hmrcOnlineServiceDesk = "https://www.gov.uk/find-hmrc-contacts/technical-support-with-hmrc-online-services"
-  govUK = "https://www.tax.service.gov.uk/account"
-  paymentEarlyLate = "https://www.gov.uk/pay-paye-tax/direct-debit#before-you-start"
-  p11DPayment = "https://www.gov.uk/pay-class-1a-national-insurance/debit-or-credit-card#reference-number"
-  payMonthly = "https://www.gov.uk/pay-paye-tax/reference-numbers-early-late-payments#if-you-pay-monthly"
-  payQuarterly = "https://www.gov.uk/pay-paye-tax/reference-numbers-early-late-payments#if-you-pay-quarterly"
+    login         = ${authHost}"/auth-login-stub/gg-sign-in"
+    loginContinue = ${host}"/direct-debits"
+    signOut       = ${authHost}"/auth-login-stub/gg-sign-in"
+    payingHmrc    = "http://www.hmrc.gov.uk/payinghmrc/"
+    hmrcHelpline  = "https://www.gov.uk/contact-hmrc"
+    selfAssessment = "https://www.gov.uk/find-hmrc-contacts/self-assessment-general-enquiries"
+    paymentProblem = "https://www.gov.uk/find-hmrc-contacts/payment-problems-enquiries"
+    hmrcOnlineServiceDesk = "https://www.gov.uk/find-hmrc-contacts/technical-support-with-hmrc-online-services"
+    govUK = "https://www.tax.service.gov.uk/account"
+    paymentEarlyLate = "https://www.gov.uk/pay-paye-tax/direct-debit#before-you-start"
+    p11DPayment = "https://www.gov.uk/pay-class-1a-national-insurance/debit-or-credit-card#reference-number"
+    payMonthly = "https://www.gov.uk/pay-paye-tax/reference-numbers-early-late-payments#if-you-pay-monthly"
+    payQuarterly = "https://www.gov.uk/pay-paye-tax/reference-numbers-early-late-payments#if-you-pay-quarterly"
 }
 
 accessibility-statement{
-  service-path = "/direct-debits"
+    service-path = "/direct-debits"
 }
 
 tracking-consent-frontend {
-  gtm.container = "c"
+    gtm.container = "c"
 }
 
 play-frontend-hmrc {
     useRebrand = true
+    forceServiceNavigation = true
 }
 
 working-days-delay {
@@ -129,26 +130,25 @@ working-days-delay {
 }
 
 features {
-  # enable switching between english/welsh
-  welsh-translation = false
-  maxNumberDDIsAllowed = 98
-  maxNumberPPsAllowed = 99
-  enableLockService = false
-  existingDirectDebit = true
+    # enable switching between english/welsh
+    welsh-translation = true
+    maxNumberDDIsAllowed = 98
+    maxNumberPPsAllowed = 99
+    enableLockService = false
+    existingDirectDebit = true
 }
 
 mac {
-   key="CJAluZLJtC6oBLs2pqKg3A=="
+    key="CJAluZLJtC6oBLs2pqKg3A=="
 }
 
 barsClient {
-   serviceUserNumber="919342"
+    serviceUserNumber="919342"
 }
-
 
 # Payment validation configuration
 payment-validation {
-  minimumLiabilityAmount = 12.00
+    minimumLiabilityAmount = 12.00
 }
 
 paymentSchedule {
