DTR-1839: adding the feedback link on click of signout

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -96,7 +96,7 @@ authHost = "http://localhost:9949"
 urls {
     login         = ${authHost}"/auth-login-stub/gg-sign-in"
     loginContinue = ${host}"/direct-debits"
-    signOut       = ${authHost}"/auth-login-stub/gg-sign-in"
+    signOut       = "http://localhost:9553/bas-gateway/sign-out-without-state"
     payingHmrc    = "http://www.hmrc.gov.uk/payinghmrc/"
     hmrcHelpline  = "https://www.gov.uk/contact-hmrc"
     selfAssessment = "https://www.gov.uk/find-hmrc-contacts/self-assessment-general-enquiries"
