DTR-1839: feedback app config changes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,6 +47,10 @@ microservice {
         host     = localhost
         port     = 8500
       }
+      bas-gateway {
+        host     = localhost
+        port     = 9553
+      }
       feedback-frontend {
         protocol = http
         host     = localhost
