--- a/conf/application.conf
+++ b/conf/application.conf
@@ -67,6 +67,15 @@ microservice {
         host     = localhost
         port     = 9871
       }
+      ndds-legacy {
+        path = /national-direct-debits
+      }
+      rate-limited-allow-list {
+        protocol = http
+        host     = localhost
+        port     = 11308
+
+      }
     }
 }
 
