DTR-2551 Handle exception from connector and explicitly re-direct users to legacy service

--- a/test/resources/application.conf
+++ b/test/resources/application.conf
@@ -14,3 +14,7 @@
 
 play.filters.disabled += "play.filters.csrf.CSRFFilter"
 play.filters.disabled += "play.filters.csp.CSPFilter"
+
+features {
+    allowListChecksEnabled = true
+}
