--- a/conf/application.conf
+++ b/conf/application.conf
@@ -74,7 +74,6 @@ microservice {
         protocol = http
         host     = localhost
         port     = 11308
-
       }
     }
 }
@@ -145,6 +144,7 @@ features {
     maxNumberPPsAllowed = 99
     enableLockService = false
     existingDirectDebit = true
+    allowListChecksEnabled = false
 }
 
 mac {
