update signout for bas-gateway-frontend url

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,7 +47,7 @@ microservice {
         host     = localhost
         port     = 8500
       }
-      bas-gateway {
+      bas-gateway-frontend {
         host     = localhost
         port     = 9553
       }
@@ -99,7 +99,7 @@ session {
 mongodb {
     uri                 = "mongodb://localhost:27017/"${appName}
     timeToLiveInSeconds = 900
-    encryption.key = "someLocalEncryptionKey=="
+    encryption.key      = "someLocalEncryptionKey=="
 }
 
 host = "http://localhost:6990"
