--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,10 +47,6 @@ microservice {
         host     = localhost
         port     = 8500
       }
-      bas-gateway {
-        host     = localhost
-        port     = 9553
-      }
       feedback-frontend {
         protocol = http
         host     = localhost
@@ -99,15 +95,14 @@ session {
 mongodb {
     uri                 = "mongodb://localhost:27017/"${appName}
     timeToLiveInSeconds = 900
-    encryption.key = "someLocalEncryptionKey=="
+    encryption.key      = "someLocalEncryptionKey=="
 }
 
 host = "http://localhost:6990"
-authHost = "http://localhost:9949"
 
 urls {
-    login         = ${authHost}"/auth-login-stub/gg-sign-in"
-    loginContinue = ${host}"/direct-debits"
+    login         = "http://localhost:9949/auth-login-stub/gg-sign-in"
+    loginContinue = "http://localhost:6990/direct-debits"
     signOut       = "http://localhost:9553/bas-gateway/sign-out-without-state"
     payingHmrc    = "http://www.hmrc.gov.uk/payinghmrc/"
     hmrcHelpline  = "https://www.gov.uk/contact-hmrc"
