DTR-3000: Update future date for add payment plans and amend plan start date like as-is

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -80,7 +80,7 @@ microservice {
 
 contact-frontend {
     host      = "http://localhost:9250"
-    serviceId = "NDDS"
+    serviceId = "directDebits"
 }
 
 timeout-dialog {
@@ -132,8 +132,9 @@ play-frontend-hmrc {
 working-days-delay {
     dynamic-delay-with-auddis-enabled = 3
     dynamic-delay-with-auddis-not-enabled = 8
-    fixed-delay = 2
-    variable-mgd-fixed-delay = 10
+    two-days = 2
+    three-days = 3
+    ten-days = 10
 }
 
 features {
