update login continue url to /directdebits

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -102,7 +102,7 @@ host = "http://localhost:6990"
 
 urls {
     login         = "http://localhost:9949/auth-login-stub/gg-sign-in"
-    loginContinue = "http://localhost:6990/direct-debits"
+    loginContinue = "http://localhost:6990/directdebits"
     signOut       = "http://localhost:9553/bas-gateway/sign-out-without-state"
     payingHmrc    = "http://www.hmrc.gov.uk/payinghmrc/"
     hmrcHelpline  = "https://www.gov.uk/contact-hmrc"
