Remove splitter solution

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -67,14 +67,6 @@ microservice {
         host     = localhost
         port     = 9871
       }
-      ndds-legacy {
-        path = /national-direct-debits
-      }
-      rate-limited-allow-list {
-        protocol = http
-        host     = localhost
-        port     = 11308
-      }
     }
 }
 
@@ -102,7 +94,7 @@ host = "http://localhost:6990"
 
 urls {
     login         = "http://localhost:9949/auth-login-stub/gg-sign-in"
-    loginContinue = "http://localhost:6990/direct-debits"
+    loginContinue = "http://localhost:6990/directdebits"
     signOut       = "http://localhost:9553/bas-gateway/sign-out-without-state"
     payingHmrc    = "http://www.hmrc.gov.uk/payinghmrc/"
     hmrcHelpline  = "https://www.gov.uk/contact-hmrc"
@@ -144,7 +136,6 @@ features {
     maxNumberPPsAllowed = 99
     enableLockService = false
     existingDirectDebit = true
-    allowListChecksEnabled = false
 }
 
 mac {
