Check allow list if the user directly calls the landing page

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -144,7 +144,7 @@ features {
     maxNumberPPsAllowed = 99
     enableLockService = false
     existingDirectDebit = true
-    allowListChecksEnabled = false
+    allowListChecksEnabled = true
 }
 
 mac {
